# chatbot

backend/: .dockerignore  dockerfile  init.sql  main.py  pyproject.toml
backend/application/domain/entities/: __init__.py  message.py  password.py  session.py  structured_feedback.py  user.py  user_token.py
backend/application/domain/exceptions/: assessment_exceptions.py  feedback_exceptions.py  service_exceptions.py  user_flow_exceptions.py
backend/application/domain/repositories/: __init__.py  assessment_response_repository_interface.py  message_repository_interface.py
backend/application/services/: __init__.py
backend/application/use_cases/: __init__.py  chatbot_use_case.py  user_authentication_usecase.py  user_flow_use_case.py  user_registration_usecase.py
backend/chat_sessions/: session_20250918_231511.json  session_20250918_231818.json  session_20250919_004331.json  session_20250919_010705.json  session_20250919_143744.json  session_20250919_145218.json  session_20250919_145344.json
backend/chatbot/: bot.py  conversation.json  memory_bot.py
backend/core/: settings.py
backend/model/: auth.py  user.py
backend/routes/: chat.py  user.py
backend/scripts/: init-db.sql  init_db.py  migrate_to_polyglot.py  reset_database.py
backend/src/application/domain/: exceptions.py
backend/src/application/domain/entities/: assessment.py  conversation_context.py  language_preferences.py  topic.py  validators.py
backend/src/application/domain/exceptions/: __init__.py  base_exceptions.py  chat_exceptions.py  session_exceptions.py  topic_exceptions.py
backend/src/application/domain/repositories/: assessment_session_repository_interface.py  session_repository_interface.py  topic_repository_interface.py  user_repository_interface.py
backend/src/application/presentation/: app.py  dependencies.py
backend/src/application/services/: __init__.py  ai_prompt_service.py  fallback_service.py  jwt_service.py  llm_adapter.py  llm_service_interface.py  llm_service_registry.py  memory_config.py  memory_manager.py  openai_llm_client.py  openai_service.py  openrouter_chatbot_service.py  openrouter_llm_client.py  openrouter_service.py  password_hashing_service.py  pedagogy_engine.py  session_memory_service.py  topic_manager.py  translation_service.py  translation_service_interface.py
backend/src/application/use_cases/: chat_use_case.py  level_assessment_use_case.py  session_management_use_case.py  session_use_case.py
frontend/chat-bot/: package-lock.json  (+1 more)
(+35 files in other folders)
